# Selbstlernkurs_Python

./: .gitignore  900-Cheatsheet.md  AGENTS.md  CITATION.cff  LICENSE.md  README.md  bibliography.bib  cheatsheet_syntax_todo.md  improvement_suggestions.md  index.md  intro.md  introduction.md  issues_to_create.md  myst.yml  pyproject.toml  requirements.in  requirements.txt  toc.yml
.claude/: settings.local.json
000-Einleitung/: Einleitung.md  Kursinhalte.md  Nutzung_des_Kurses.md  Spezifika_Fernstudium.md
010-Installation_Technik/: Einleitung.md  JupyterHub.md  JupyterLab.md  Jupyter_Hub.md  Jupyter_Lab.md  Lokale_Installation.md  Warum_Python.ipynb
020-Projekt_Taschenrechner/: 000-Einleitung.md  010-Python_REPL.ipynb  010-Python_REPL.md  020-Grundlegende_Mathematik.ipynb  020-Grundlegende_Mathematik.md  025-Kontrollstrukturen.ipynb  030-Python_Code_Dateien.ipynb  030-Python_Code_Dateien.md  040-Jupyter_Notebooks.ipynb  040-Jupyter_Notebooks.md  050-Ausführbare_Skripte.md  060-Taschenrechner.ipynb  060-Taschenrechner.md  061-Nutzerinneneingabe.ipynb  062-Schleifen.ipynb  063-Implementierung.ipynb  070-Aufgabe_Erweiterung.md  Aufgabe_Erweiterung.md  Ausführbare_Skripte.md  Einleitung.md  Jupyter_Notebooks.md  Python_REPL.md  Taschenrechner.md  test.ipynb  test.md  test2.md
020-Projekt_Taschenrechner_I/: 000-Einleitung.md  010-Python_REPL.ipynb  010-Python_REPL.md  020-Grundlegende_Mathematik.ipynb  025-Kontrollstrukturen.ipynb  030-Python_Code_Dateien.ipynb  040-Jupyter_Notebooks.ipynb  050-Ausführbare_Skripte.md
030-Exkurs_Unix/: 000-Einleitung.md  Einleitung.md  (+7 more)
(+59 files in other folders)
